extremely minor tweaks
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@4719 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/ICMC2009-dbap/icmc2009-dbap.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.tex
@@ -241,7 +241,7 @@ k = \frac{2a}{\sqrt{\sum_{i=1}^{N} \frac{{w_{i}}^2}{{d_{i}}^2}}}
 
 This might offer several artistic possibilities. 
 
-For instance, within the tradition of the Acousmonium \cite{Bayle:1993MusiqueAcousmatique} a large number of speakers are used, sorted in several groups with different qualities and characteristics, thus allowing a scripting of sound space according to the spectral content of the projected music \cite{Prager:2002acousmatique}. If the loudspeaker setup consists of different kinds of speakers with differing spectral properties, they can be thought of as an orchestra of speakers and be organized into different instrumental groups. Spatial weights can then be used to ensure that a source is spatialised among members of one group only. This allows a timbral and spatial orchestration to be prepared or composed prior to performance, and then be adjusted to the specific room used for playback \cite{Lyon:2008spatial_orchestration}. 
+For instance, within the tradition of the Acousmonium \cite{Bayle:1993MusiqueAcousmatique} a large number of speakers are used, sorted in several groups with different qualities and characteristics, thus allowing a scripting of sound space according to the spectral content of the projected music \cite{Prager:2002acousmatique}. If the loudspeaker setup consists of different kinds of speakers with differing spectral properties, they can be thought of as an orchestra of speakers and be organized into different instrumental groups. Spatial weights can then be used to ensure that a source is spatialized among members of one group only. This allows a timbral and spatial orchestration to be prepared or composed prior to performance, and then be adjusted to the specific room used for playback \cite{Lyon:2008spatial_orchestration}. 
 
 In installations or museum spaces spatial weights can also be used to confine sources to restricted areas. For instance one source can be diffused in one room only while another source with a different set of spatial weights might be permitted to move between several or all rooms.
 
