Authors are commented out
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@4725 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/ICMC2009-dbap/icmc2009-dbap.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.tex
@@ -26,9 +26,9 @@
 
 %==== final submission: author name and affiliation ====
 %---- uncomment 1 to 4 lines, for 1 to 4 authors
-\def\paperauthorA{Trond Lossius}
-\def\paperauthorB{Pascal Baltazar}
-\def\paperauthorC{Th\'eo de la Hogue}
+%\def\paperauthorA{Trond Lossius}
+%\def\paperauthorB{Pascal Baltazar}
+%\def\paperauthorC{Th\'eo de la Hogue}
 %\def\paperauthorD{Fourth Author}
 
 %%---- set correspnding affiliation data for...
@@ -45,9 +45,9 @@
 %  {\paperauthorB}{Company\\ Address}
 
 %%-- 3 authors with different affiliations
-\threeaffiliations{\paperauthorA}{BEK\\C. Sundtsgt. 55\\5004 Bergen\\Norway\\trond.lossius@bek.no}
-  {\paperauthorB}{GMEA\\4 rue Sainte Claire\\81000 Albi\\France\\pb@gmea.net}
-  {\paperauthorC}{GMEA\\4 rue Sainte Claire\\81000 Albi\\France\\theod@gmea.net}
+%\threeaffiliations{\paperauthorA}{BEK\\C. Sundtsgt. 55\\5004 Bergen\\Norway\\trond.lossius@bek.no}
+%  {\paperauthorB}{GMEA\\4 rue Sainte Claire\\81000 Albi\\France\\pb@gmea.net}
+%  {\paperauthorC}{GMEA\\4 rue Sainte Claire\\81000 Albi\\France\\theod@gmea.net}
 
 %%-- 4 authors with different affiliations
 %\fouraffiliations{\paperauthorA}{School A\\ Department X}
