typos in the conclusion
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@4728 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/ICMC2009-dbap/icmc2009-dbap.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.tex
@@ -330,13 +330,13 @@ These pictures are generated in realtime by the algorithm, and can thus be used 
 
 \section{Conclusions and further work}
 
-DBAP offers a light-weigh panning-based solution for spatialization that works for irregular loudspeaker layouts. The Jamoma module implementation makes DBAP available alongside modules for VBAP and ambisonics modules, enabling techniques to be interchanged and compared. Jamoma also offers a more advanced spatialisation technique that can be used for irregular loudspeaker layouts, ViMiC, incorporating distance-based signal delays between speakers, simulation of microphone patterns, early reflections and surface absorption \cite{Peters:2008vimic}. ViMiC is more CPU-intensive, and might require a dedicated computer for spatialization or limitations on the number of loudspeakers used as compared to DBAP.
+DBAP offers a light-weight panning-based solution for spatialization that works for irregular loudspeaker layouts. The Jamoma module implementation makes DBAP available alongside modules for VBAP and ambisonics, enabling techniques to be interchanged and compared. Jamoma also offers a more advanced spatialization technique that can be used for irregular loudspeaker layouts, ViMiC, incorporating distance-based signal delays between speakers, simulation of microphone patterns, early reflections and surface absorption \cite{Peters:2008vimic}. ViMiC is more CPU-intensive, and might require a dedicated computer for spatialization or limitations on the number of loudspeakers used as compared to DBAP.
 
 Implementations of convex hulls and spatial weights remains to be done for three-dimensional loudspeaker layouts. If spatial weights are used to define subspaces of speakers, it also remains to be investigated if and how the implementation of convex hulls can be dynamically reconfigured.
 
-In this paper DBAP has been discussed used for spatialisation to a static layout of speakers. For gaming applications the speaker layout relative to the player could be defined, and then the actual speaker layout could be changed dynamically as the gamer moves through the virtual world of the game.
+In this paper DBAP has been discussed for spatialization to a static layout of speakers. For gaming applications the speaker layout relative to the player could be defined, and then the actual speaker layout could be changed dynamically as the gamer moves through the virtual world of the game.
 
-DBAP can also be used as a solution for dynamic routing of input sources to a spacial layout of effect processes. Instead of defining loudspeaker positions, the effects could be assigned positions in two or more spaces. The idea of having sources traverse a space of effects would resemble  e.g. the work by \cite{Momeni:2003hipnoscope}. A project for designing multi-touch graphical interfaces to intuitively interact with DBAP has been initiated.
+DBAP can also be used as a solution for dynamic routing of input sources to a spatial layout of effect processes. Instead of defining loudspeaker positions, the effects could be assigned positions in two or more spaces. The idea of having sources traverse a space of effects would resemble  e.g. the work by \cite{Momeni:2003hipnoscope}. A project for designing multi-touch graphical interfaces to intuitively interact with DBAP has been initiated.
 
 
 \section{Acknowledgements}
