Cleaning up references
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@4729 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/ICMC2009-dbap/icmc2009-dbap.bib
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for lossius at 2009-02-09 03:38:39 +0100 
+%% Created for lossius at 2009-02-10 12:35:46 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -38,9 +38,8 @@
 	Address = {Hearing Research Center, Boston University, Massachusetts 02215, USA. litovsky@bu.edu},
 	Author = {Litovsky, R. Y. and Colburn, H. S. and Yost, W. A. and Guzman, S. J.},
 	Citeulike-Article-Id = {1015040},
-	Comment = {Available online for free here: http://www.waisman.wisc.edu/~litovsky/papers/1999-3.pdf},
 	Date-Added = {2009-02-09 00:33:38 +0100},
-	Date-Modified = {2009-02-09 00:33:38 +0100},
+	Date-Modified = {2009-02-10 12:31:49 +0100},
 	Issn = {0001-4966},
 	Journal = {Journal of the Acoustical Society of America},
 	Keywords = {psychoacoustics, spatialisation},
@@ -49,7 +48,6 @@
 	Pages = {1633--1654},
 	Priority = {3},
 	Title = {The precedence effect.},
-	Url = {http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve\&db=pubmed\&dopt=Abstract\&list_uids=10530009},
 	Volume = {106},
 	Year = {1999},
 	Bdsk-Url-1 = {http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve%5C&db=pubmed%5C&dopt=Abstract%5C&list_uids=10530009}}
@@ -102,7 +100,7 @@ Model-based rendering may be interpreted as a special case of the data-based app
 	Author = {S. Spors and H. Teutsch and A. Kuntz and R. Rabenstein},
 	Citeulike-Article-Id = {1076402},
 	Date-Added = {2009-02-08 22:14:12 +0100},
-	Date-Modified = {2009-02-08 22:14:12 +0100},
+	Date-Modified = {2009-02-10 12:35:45 +0100},
 	Editor = {Huang, Yiteng and Benesty, Jacob},
 	Howpublished = {Hardcover},
 	Isbn = {1402077688},
@@ -111,7 +109,6 @@ Model-based rendering may be interpreted as a special case of the data-based app
 	Priority = {2},
 	Publisher = {Springer},
 	Title = {Sound Field Synthesis. In Audio Signal Processing for Next-Generation Multimedia Communication Systems},
-	Url = {http://www.amazon.fr/exec/obidos/ASIN/1402077688/citeulike04-21},
 	Year = {2004},
 	Bdsk-Url-1 = {http://www.amazon.fr/exec/obidos/ASIN/1402077688/citeulike04-21}}
 
@@ -162,16 +159,15 @@ GhpY19zb3VuZC5wZGbSHh8mJ6InI1xOU0RpY3Rpb25hcnkACAARABoAHwApADIANwA6AD8AQQBT
 AFwAYgBpAHAAeACDAIUAiACKAIwAjwCRAJMAnQCqAK8AtwC5AscCzALVAuAC5ALyAvkDAgNZA14
 DYQAAAAAAAAIBAAAAAAAAACgAAAAAAAAAAAAAAAAAAANu}}
 
-@periodical{Gerzon:1974surround,
+@article{Gerzon:1974surround,
 	Author = {M. Gerzon},
 	Date-Added = {2009-02-08 22:04:47 +0100},
-	Date-Modified = {2009-02-08 22:04:47 +0100},
+	Date-Modified = {2009-02-10 12:30:17 +0100},
 	Journal = {Wireless World. Reprinted in An anthology of articles on spatial sound techniques, part 2: Multichannel audio technologies. Edited by F. Rumsey. Audio engineering society, Inc, 2006.},
 	Keywords = {spatialisation, ambisonics},
 	Month = {December},
 	Pages = {483-486},
 	Title = {Surround-sound psychoacoustics: Criteria for the design of matrix and descrete surround-sound systems.},
-	Url = {http://www.ai.sri.com/ajh/audio/sfm/scans/wireless-world-gerzon-12-1974.pdf},
 	Year = {1974},
 	Bdsk-Url-1 = {http://www.ai.sri.com/ajh/audio/sfm/scans/wireless-world-gerzon-12-1974.pdf}}
 
@@ -243,7 +239,7 @@ AAAAAA1I=}}
 	Author = {Rumsey, Francis},
 	Citeulike-Article-Id = {227605},
 	Date-Added = {2009-02-08 21:07:28 +0100},
-	Date-Modified = {2009-02-08 21:07:28 +0100},
+	Date-Modified = {2009-02-10 12:35:34 +0100},
 	Howpublished = {Paperback},
 	Isbn = {0240516230},
 	Keywords = {spatialisation},
@@ -251,7 +247,6 @@ AAAAAA1I=}}
 	Priority = {3},
 	Publisher = {{Focal Press, Oxford and Boston}},
 	Title = {{Spatial Audio}},
-	Url = {http://www.amazon.co.uk/exec/obidos/ASIN/0240516230/citeulike-21},
 	Year = {2001},
 	Bdsk-Url-1 = {http://www.amazon.co.uk/exec/obidos/ASIN/0240516230/citeulike-21}}
 
@@ -476,14 +471,13 @@ Aq4CtwLCAsYC1ALbAuQDMwM4AzsAAAAAAAACAQAAAAAAAAAoAAAAAAAAAAAAAAAAAAADSA==}}
 @article{Pulkki:1997vbap,
 	Author = {Pulkki, V.},
 	Date-Added = {2009-02-08 20:51:58 +0100},
-	Date-Modified = {2009-02-08 20:51:58 +0100},
+	Date-Modified = {2009-02-10 12:34:43 +0100},
 	Journal = {Journal of the Audio Engineering Society},
 	Keywords = {spatialisation, vbap},
 	Local-Url = {file://localhost/Users/lossius/Documents/Artikler/_bibdesk_indexed/Pulkki_1997vbap.pdf},
 	Month = {June},
 	Pages = {456-466},
 	Title = {Virtual sound source positioning using vector base amplitude panning},
-	Url = {http://lib.tkk.fi/Diss/2001/isbn9512255324/},
 	Volume = {45(6)},
 	Year = {1997},
 	Bdsk-File-1 = {YnBsaXN0MDDUAQIDBAUGCQpYJHZlcnNpb25UJHRvcFkkYXJjaGl2ZXJYJG9iamVjdHMSAAGGoNE
@@ -509,11 +503,10 @@ AAAAAAAoAAAAAAAAAAAAAAAAAAADKg==},
 	Author = {Pulkki, V.},
 	Booktitle = {Proceedings of the 1999 IEEE Workshop on Applications of Signal Processing to Audio and Acoustics. Mohonk Mountain House, New Paltz, New York.},
 	Date-Added = {2009-02-08 20:50:39 +0100},
-	Date-Modified = {2009-02-08 20:50:39 +0100},
+	Date-Modified = {2009-02-10 12:34:37 +0100},
 	Keywords = {spatialisation, vbap},
 	Local-Url = {file://localhost/Users/lossius/Documents/Artikler/_bibdesk_indexed/Pulkki_1999vbap.pdf},
 	Title = {Uniform spreading of amplitude panned virtual sources},
-	Url = {http://lib.tkk.fi/Diss/2001/isbn9512255324/},
 	Year = {1999},
 	Bdsk-File-1 = {YnBsaXN0MDDUAQIDBAUGCQpYJHZlcnNpb25UJHRvcFkkYXJjaGl2ZXJYJG9iamVjdHMSAAGGoNE
 HCFRyb290gAFfEA9OU0tleWVkQXJjaGl2ZXKoCwwXGBkdJCVVJG51bGzTDQ4PEBEUViRjbGFzc1
