added URL to the NodeLib Jamoma WIKI page
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@4951 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Resources/Specifications/NodeLib/NodeLib.tex
+++ b/Resources/Specifications/NodeLib/NodeLib.tex
@@ -11,7 +11,7 @@
 
 % Setup for fullpage use
 \usepackage{fullpage}
-
+\usepackage{hyperref} 
 % Uncomment some of the following if you use the features
 %
 % Running Headers and footers
@@ -122,20 +122,21 @@ Initially focused on working only for local contexts (e.g. inside of a running M
 
 \subsection{Later Features}
 
-Including expansion to working with remote contexts (other processes or remote machines)
+Including expansion to working with remote contexts (other processes or remote machines). 
 
 \begin{itemize}
 
-	\item [ Aliases ] ability to create nodes which are aliases to other nodes
+	\item {[ Aliases ] ability to create nodes which are aliases to other nodes}
 
-	\item jcom.send= and jcom.receive=
+	\item {jcom.send= and jcom.receive=}
 
-	\item running the daemon in another thread?
+	\item {running the daemon in another thread?}
 
-	\item communicating with a network
+	\item {communicating with a network}
 
 \end{itemize}
 
+A list of comments, notes and feature requests can be found in the Jamoma WIKI under \url{http://groupware.bek.no/groups/jamoma/wiki/1f98f/NodeLib.html}. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
