--- a/Resources/Specifications/DataspaceLib/DataspaceLib.tex
+++ b/Resources/Specifications/DataspaceLib/DataspaceLib.tex
@@ -101,6 +101,8 @@ When Hera curses Echo she needs to be able to set the amount of time for the ech
 
 Brita needs to have a filter module.  The parameters of the filter in the filter module are frequency, q, and gain.  They need to be displayed and controlled using a filtergraph~ object and number boxes or sliders.  The frequency and gain both must be specifiable in various units.
 
+\subsection{Case 4: Lenny the +10dB producer}
+Lenny, a successful producer from San Francisco, doesn't like midi numbers and feels more comfortable with dB (especially with +10 dB). Therefore he wants to change globally all gain UI elements in Jamoma  (knobs, textslider, numberboxes) from default Jamoma-MIDI to dB. 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -244,7 +246,13 @@ Tim:
 I have been more concerned about the efficiency than about rounding errors, but theoretically both are possible.  Fortunately there will be no conversions unless you ask for them.  
 
 It may be possible in the future to optimize as well.  For example, if the graph can be detected as containing unitA to unitB to unitC to unitA then it could optimize itself to just convert directly between the bounding units.  As with any such optimization, I would place it as something to be done in the distant future -- after we have a fully functioning and field tested system in place.
+ 
+\subsection{UI elements}
+for certain UI-elements such as jcom.textslider or dial, a range has to be defined. This range needs to change when we change between different units.\\
+One idea would be to implement Jamoma-specific UI-elements (or just wrapper for existing UI elements) with consistent attributes in order to modify them directly from a jcom.parameter/message                                                                                                                                               
 
+\subsection{range/bounds}
+To what unit (active/native/display/override) relates the range/bounds attribute ?
 
 \subsection{More Use Cases}
 
